--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "webpack-dev-server --hot --inline"
+    "test": "webpack-dev-server --hot --inline",
+    "build": "webpack-cli --config webpack.es6.config.js",
+    "build_es6": "webpack-dev-server --hot --inline --config webpack.es6.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +19,11 @@
     "webpack-dev-server": "^3.1.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-latest": "^6.24.1",
     "webpack": "^4.4.1",
     "webpack-dev-server": "^3.1.1"
   }
